--- a/pipelines/get-dataset-status.yaml
+++ b/pipelines/get-dataset-status.yaml
@@ -10,11 +10,11 @@ spec:
       required: true
     namespace:
       required: true
-      desc: 命名空间, e.g. namespace/dataset, namespace is what you want
+      desc: namespace
       regex: ^(?!.*__)([a-z0-9](-[a-z0-9]){0,61}[a-z0-9]?|[a-z0-9]{1,63})$
     dataset:
       required: true
-      desc: 数据集、存储名字, e.g. namespace/dataset, dataset is what you want
+      desc: dataset
       regex: ^(?!.*__)([a-z0-9](-[a-z0-9]){0,61}[a-z0-9]?|[a-z0-9]{1,63})$
   tasks:
     - name: 查询数据集状态
