--- a/default.toml
+++ b/default.toml
@@ -1,9 +1,9 @@
 [server]
 runmode="release"
-token="P@88w0rd"
+token="ops"
 [copilot]
 endpoint="https://api.openai.com/v1"
 key=""
 model="gpt-3.5-turbo-16k"
 opsserver="http://myops-server.ops-system.svc"
-opstoken="P@88w0rd"
+opstoken="ops"
