--- a/tasks/alert-dataset-notready.yaml
+++ b/tasks/alert-dataset-notready.yaml
@@ -63,7 +63,7 @@ spec:
                           age_minutes = int(age_str.split('m')[0])
                           age_time = current_time - timedelta(minutes=age_minutes)
                       if (current_time - age_time).total_seconds() > 300:
-                          message = f"\n  namespace: {namespace}\n  dataset: {name}\n  status: {phase} {age_str}"
+                          message = f"<br> >namespace: {namespace} <br> >dataset: {name} <br> >status: {phase} {age_str}"
                           send('alert', message)
 
               except Exception as e:
