--- a/tasks/uncordon-node.yaml
+++ b/tasks/uncordon-node.yaml
@@ -7,9 +7,9 @@ spec:
   desc: uncordon node in cluster
   host: anymaster
   variables:
-    host:
+    node:
       desc: node name
       required: true
   steps:
     - name: uncordon node
-      content: kubectl uncordon ${host}
+      content: kubectl uncordon ${node}
