modify token key

--- a/pipelines/delete-kas-job.yaml
+++ b/pipelines/delete-kas-job.yaml
@@ -8,10 +8,7 @@ spec:
   variables:
     cluster:
       required: true
-    host:
-      value: "anymaster"
-      required: true
-    taskId:
+    task:
       required: true
       examples: ["21780"]
       regex: "^[0-9]*$"
