--- a/tasks/check-pod-existed.yaml
+++ b/tasks/check-pod-existed.yaml
@@ -7,10 +7,10 @@ spec:
   desc: check the pod existed and get pod namespace
   host: anymaster
   variables:
-    podname:
+    pod:
       required: true
       display: pod name
   steps:
     - name: Check pod existed
       content: |
-        found=$(kubectl get pods --all-namespaces | awk -v pn="${podname}" '$2 ~ pn {print $1; exit}'); [ -n "$found" ] && echo "Pod ${podname} found in $found" && exit 0 || echo "Pod ${podname} not found" && exit 1
+        found=$(kubectl get pods --all-namespaces | awk -v pn="${pod}" '$2 ~ pn {print $1; exit}'); [ -n "$found" ] && echo "Pod ${pod} found in $found" && exit 0 || echo "Pod ${pod} not found" && exit 1
