--- a/pipelines/restart-fabricmanager.yaml
+++ b/pipelines/restart-fabricmanager.yaml
@@ -8,7 +8,7 @@ spec:
   variables:
     cluster:
       required: true
-    node:
+    host:
       required: true
       regex: "\b[a-zA-Z-]*node[a-zA-Z-]*\b"
     white:
