--- a/tasks/top-pods-bycpu-node.yaml
+++ b/tasks/top-pods-bycpu-node.yaml
@@ -7,8 +7,8 @@ spec:
   desc: list topK usage cpu of pods in node
   host: anymaster
   variables:
-    node:
-      desc: node name
+    host:
+      desc: host name
       required: true
     topk: 
       default: "5"
@@ -16,4 +16,4 @@ spec:
     - name: list topK usage cpu of pods in specified node
       content: |
         echo "NAME                 CPU(m)          MEMORY(Mi) "
-        kubectl get pods -A -o wide | grep ${node} | awk '{print $1, $2}' | while read ns pod; do kubectl top pod  --no-headers -n "$ns" "$pod"; done 2>&1 | grep -v "NotFound" | awk '{sub(/m/, "", $2); sub(/Mi/, "", $3); print}' | sort -k2,2nr | head -$((${topk}+1))
+        kubectl get pods -A -o wide | grep ${host} | awk '{print $1, $2}' | while read ns pod; do kubectl top pod  --no-headers -n "$ns" "$pod"; done 2>&1 | grep -v "NotFound" | awk '{sub(/m/, "", $2); sub(/Mi/, "", $3); print}' | sort -k2,2nr | head -$((${topk}+1))
