--- a/charts/ops/values.yaml
+++ b/charts/ops/values.yaml
@@ -81,8 +81,8 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
-nodeSelector: {}
-
+nodeSelector:
+  kubernetes.io/arch: amd64
 tolerations: []
 
 affinity: {}
