--- a/tasks/app-device-plugin-volcano.yaml
+++ b/tasks/app-device-plugin-volcano.yaml
@@ -1,25 +1,22 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: install-device-plugin-volcano
+  name: app-device-plugin-volcano
   namespace: ops-system
 spec:
-  desc: install device plugin for volcano
+  desc: install or uninstall device plugin for volcano
   runtimeImage: registry.cn-hangzhou.aliyuncs.com/shaowenchen/hubimage:latest
   host: anymaster
   variables:
     device-plugin-volcano-image:
       desc: device plugin volcano image
       required: true
+    action:
+      default: apply
   steps:
-    - name: Check exist
-      content: |
-        if [ $(kubectl get pod -A | grep -c device-plugin) -gt 2 ]; then
-          exit 1
-        fi
-    - name: install
+    - name: take action
       content: |
         export DEVICE_PLUGIN_VOLCANO_IMAGE=${device-plugin-volcano-image}
 
         export KUBECONFIG=/host/root/.kube/config
-        kubectl apply -f /host/ascend/npu-exporter-v5.0.RC3.yaml
+        kubectl ${action} -f /host/ascend/npu-exporter-v5.0.RC3.yaml
