--- a/tasks/app-hccl-test.yaml
+++ b/tasks/app-hccl-test.yaml
@@ -1,25 +1,22 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: install-hccl-test
+  name: app-hccl-test
   namespace: ops-system
 spec:
-  desc: install hccl-test
+  desc: install or uninstall hccl-test
   runtimeImage: registry.cn-hangzhou.aliyuncs.com/shaowenchen/hubimage:latest
   host: anymaster
   variables:
     hccl-test-image:
       desc: hccl-test image
       required: true
+    action:
+      default: apply
   steps:
-    - name: Check exist
-      content: |
-        if [ $(kubectl get pod -A | grep -c hccl-test) -gt 2 ]; then
-          exit 1
-        fi
-    - name: install
+    - name: take action
       content: |
         export HCCL_TEST_IMAGE=${hccl-test-image}
 
         export KUBECONFIG=/host/root/.kube/config
-        kubectl apply -f /host/ascend/hccl-test.yaml
+        kubectl ${action} -f /host/ascend/hccl-test.yaml
