--- a/tasks/app-volcano.yaml
+++ b/tasks/app-volcano.yaml
@@ -1,10 +1,10 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: install-volcano
+  name: app-volcano
   namespace: ops-system
 spec:
-  desc: install volcano
+  desc: install or uninstall volcano
   runtimeImage: registry.cn-hangzhou.aliyuncs.com/shaowenchen/hubimage:latest
   host: anymaster
   variables:
@@ -14,15 +14,12 @@ spec:
     volcano-controller-image:
       desc: volcano controller image
       required: true
+    action:
+      default: apply
   steps:
-    - name: Check exist
-      content: |
-        if [ $(kubectl get pod -A | grep -c volcano) -gt 2 ]; then
-          exit 1
-        fi
-    - name: install
+    - name: take action
       content: |
         export VOLCANO_SCHEDULER_IMAGE=${volcano-scheduler-image}
         export VOLCANO_CONTROLLER_IMAGE=${volcano-controller-image}
         export KUBECONFIG=/host/root/.kube/config
-        kubectl apply -f /host/ascend/volcano-v1.7.0.yaml
+        kubectl ${action} -f /host/ascend/volcano-v1.7.0.yaml
