--- a/tasks/app-argo-events.yaml
+++ b/tasks/app-argo-events.yaml
@@ -1,22 +1,22 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: app-device-plugin-volcano
+  name: app-argo-events
   namespace: ops-system
 spec:
-  desc: install or uninstall device plugin for volcano
+  desc: install or uninstall argo events
   runtimeImage: registry.cn-hangzhou.aliyuncs.com/shaowenchen/hubimage:latest
   host: anymaster
   variables:
-    device-plugin-volcano-image:
-      desc: device plugin volcano image
+    argo-events-image:
+      desc: argo events image
       required: true
     action:
       default: apply
   steps:
     - name: take action
       content: |
-        export DEVICE_PLUGIN_VOLCANO_IMAGE=${device-plugin-volcano-image}
+        export ARGO_EVENTS_IMAGE=${argo-events-image}
 
         export KUBECONFIG=/host/root/.kube/config
-        envsubst < /host/ascend/npu-exporter-v5.0.RC3.yaml | kubectl ${action} -f -
+        envsubst < /host/ascend/argo-events-v1.8.0.yaml | kubectl ${action} -f -
