--- a/tasks/app-npu-exporter.yaml
+++ b/tasks/app-npu-exporter.yaml
@@ -19,4 +19,4 @@ spec:
         export NPU_EXPORTER_IMAGE=${npu-exporter-image}
 
         export KUBECONFIG=/host/root/.kube/config
-        kubectl ${action} -f /host/ascend/npu-exporter-v5.0.RC3.yaml
+        envsubst < /host/ascend/npu-exporter-v5.0.RC3.yaml | kubectl ${action} -f -
