--- a/pipelines/app-argo-events.yaml
+++ b/pipelines/app-argo-events.yaml
@@ -2,6 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Pipeline
 metadata:
   name: app-argo-events
+  namespace: ops-system
 spec:
   desc: 安装、卸载 argo events 组件
   variables:
