--- a/pipelines/app-volcano.yaml
+++ b/pipelines/app-volcano.yaml
@@ -2,6 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Pipeline
 metadata:
   name: app-volcano
+  namespace: ops-system
 spec:
   desc: 安装、卸载 volcano 组件
   variables:
