--- a/pipelines/app-volcano.yaml
+++ b/pipelines/app-volcano.yaml
@@ -10,8 +10,10 @@ spec:
       required: true
     volcano-scheduler-image:
       required: true
+      default: registry.cn-hangzhou.aliyuncs.com/opshub/vc-scheduler:v1.7.0
     volcano-controller-image:
       required: true
+      default: registry.cn-hangzhou.aliyuncs.com/opshub/vc-controller-manager:v1.7.0
     action:
       required: true
       default: apply
