--- a/pipelines/app-npu-exporter.yaml
+++ b/pipelines/app-npu-exporter.yaml
@@ -10,6 +10,7 @@ spec:
       required: true
     npu-exporter-image:
       required: true
+      default: registry.cn-hangzhou.aliyuncs.com/opshub/npu-exporter:v5.0-arm64
     action:
       required: true
       default: apply
