--- a/tasks/clear-disk.yaml
+++ b/tasks/clear-disk.yaml
@@ -18,7 +18,7 @@ spec:
     - name: clear volume
       content: nerdctl --namespace k8s.io volume prune -a -f 2>/dev/null || docker volume prune -a -f 2>/dev/null || true
     - name: clear > 100M log in /var/log
-      content: find /var/log -type f -name "*.log" -size +100M -exec sh -c 'for file do echo "cleaned $file" >&2; echo "" > "$file"; done' sh {} + 2>/dev/null || true
+      content: find /var/log -type f -name "*log*" -size +100M -exec sh -c 'for file do echo "cleaned $file" >&2; echo "" > "$file"; done' sh {} + 2>/dev/null || true
     - name: clear > 100M log in /data/run
       content: find /data/run -type f -name "*.log" -size +50M -exec sh -c 'for file do echo "cleaned $file" >&2; echo "" > "$file"; done' sh {} + 2>/dev/null || true
     - name: clear jfs cache
