--- a/tasks/app-device-plugin-volcano.yaml
+++ b/tasks/app-device-plugin-volcano.yaml
@@ -20,4 +20,4 @@ spec:
         export DEVICE_PLUGIN_VOLCANO_IMAGE=${device-plugin-volcano-image}
 
         export KUBECONFIG=/host/root/.kube/config
-        envsubst < /host/ascend/npu-exporter-v5.0.RC3.yaml | kubectl ${action} -f -
+        envsubst < /ascend/npu-exporter-v5.0.RC3.yaml | kubectl ${action} -f -
