--- a/pipelines/app-argo-events.yaml
+++ b/pipelines/app-argo-events.yaml
@@ -10,7 +10,7 @@ spec:
       required: true
     argo-events-image:
       required: true
-      default: registry.cn-hangzhou.aliyuncs.com/opshub/argo-events:v1.8.0
+      default: registry.cn-hangzhou.aliyuncs.com/opshub/argoproj-argo-events:v1.8.0
     action:
       required: true
       default: apply
