--- a/pipelines/app-argo-workflows.yaml
+++ b/pipelines/app-argo-workflows.yaml
@@ -10,10 +10,10 @@ spec:
       required: true
     argo-cli-image:
       required: true
-      default: registry.cn-hangzhou.aliyuncs.com/opshub/argocli:v3.5.5
-    argo-workflows-image:
+      default: registry.cn-hangzhou.aliyuncs.com/opshub/argoproj-argocli:v3.5.5
+    argo-workflow-image:
       required: true
-      default: registry.cn-hangzhou.aliyuncs.com/opshub/argo-workflow-controller:v3.5.5
+      default: registry.cn-hangzhou.aliyuncs.com/opshub/argoproj-workflow-controller:v3.5.5
     action:
       required: true
       default: apply
