--- a/tasks/app-argo-workflows.yaml
+++ b/tasks/app-argo-workflows.yaml
@@ -11,18 +11,18 @@ spec:
     argo-cli-image:
       desc: argo cli image
       required: true
-      default: registry.cn-hangzhou.aliyuncs.com/opshub/argocli:v3.5.5
-    argo-workflows-image:
-      desc: argo workflows image
+      default: registry.cn-hangzhou.aliyuncs.com/opshub/argoproj-argocli:v3.5.5
+    argo-workflow-image:
+      desc: argo workflow image
       required: true
-      default: registry.cn-hangzhou.aliyuncs.com/opshub/argo-workflow-controller:v3.5.5
+      default: registry.cn-hangzhou.aliyuncs.com/opshub/argoproj-workflow-controller:v3.5.5
     action:
       default: apply
   steps:
     - name: take action
       content: |
         export ARGO_CLI_IMAGE=${argo-cli-image}
-        export ARGO_WORKFLOWS_IMAGE=${argo-workflows-image}
+        export ARGO_WORKFLOW_IMAGE=${argo-workflow-image}
 
         export KUBECONFIG=/host/root/.kube/config
         envsubst < /ascend/argo-workflows-v3.5.5.yaml | kubectl ${action} -f -
