--- a/pipelines/app-device-plugin-volcano.yaml
+++ b/pipelines/app-device-plugin-volcano.yaml
@@ -10,6 +10,7 @@ spec:
       required: true
     device-plugin-volcano-image:
       required: true
+      default: registry.cn-hangzhou.aliyuncs.com/opshub/ascend-k8sdeviceplugin:v5.0-arm64
     action:
       required: true
       default: apply
