--- a/pipelines/clear-disk.yaml
+++ b/pipelines/clear-disk.yaml
@@ -3,6 +3,8 @@ kind: Pipeline
 metadata:
   name: clear-disk
   namespace: ops-system
+  labels:
+    ops/copilot: enabled
 spec:
   desc: 清理磁盘
   variables:
