--- a/pipelines/cordon-node.yaml
+++ b/pipelines/cordon-node.yaml
@@ -3,6 +3,8 @@ kind: Pipeline
 metadata:
   name: cordon-node
   namespace: ops-system
+  labels:
+    ops/copilot: enabled
 spec:
   desc: 禁用集群中的某个节点
   variables:
