--- a/pipelines/create-dataload.yaml
+++ b/pipelines/create-dataload.yaml
@@ -3,6 +3,8 @@ kind: Pipeline
 metadata:
   name: create-dataload
   namespace: ops-system
+  labels:
+    ops/copilot: enabled
 spec:
   desc: 预热数据集
   variables:
