--- a/pipelines/create-namespace.yaml
+++ b/pipelines/create-namespace.yaml
@@ -3,6 +3,8 @@ kind: Pipeline
 metadata:
   name: create-namespace
   namespace: ops-system
+  labels:
+    ops/copilot: enabled
 spec:
   desc: 创建 namespace
   variables:
