--- a/pipelines/delete-kas-job.yaml
+++ b/pipelines/delete-kas-job.yaml
@@ -3,6 +3,8 @@ kind: Pipeline
 metadata:
   name: delete-kas-job
   namespace: ops-system
+  labels:
+    ops/copilot: enabled
 spec:
   desc: 删除指定的 KAS Job
   variables:
