--- a/pipelines/get-node-status.yaml
+++ b/pipelines/get-node-status.yaml
@@ -3,6 +3,8 @@ kind: Pipeline
 metadata:
   name: get-node-status
   namespace: ops-system
+  labels:
+    ops/copilot: enabled
 spec:
   desc: 查看节点的状态
   variables:
