--- a/pipelines/inspect-error-svc.yaml
+++ b/pipelines/inspect-error-svc.yaml
@@ -3,6 +3,8 @@ kind: Pipeline
 metadata:
   name: inspect-error-svc
   namespace: ops-system
+  labels:
+    ops/copilot: enabled
 spec:
   desc: svc 处于异常状态时，用来查看 svc 的错误日志和错误事件
   variables:
