--- a/pipelines/list-clusters.yaml
+++ b/pipelines/list-clusters.yaml
@@ -3,6 +3,8 @@ kind: Pipeline
 metadata:
   name: list-clusters
   namespace: ops-system
+  labels:
+    ops/copilot: enabled
 spec:
   desc: 列出、查看所有的集群
   variables:
