--- a/pipelines/list-datasets.yaml
+++ b/pipelines/list-datasets.yaml
@@ -3,6 +3,8 @@ kind: Pipeline
 metadata:
   name: list-datasets
   namespace: ops-system
+  labels:
+    ops/copilot: enabled
 spec:
   desc: 列出命名空间下的数据集
   variables:
