--- a/pipelines/list-namespaces.yaml
+++ b/pipelines/list-namespaces.yaml
@@ -3,6 +3,8 @@ kind: Pipeline
 metadata:
   name: list-namespace
   namespace: ops-system
+  labels:
+    ops/copilot: enabled
 spec:
   desc: 列出、查看所有的命名空间
   variables:
