--- a/pipelines/list-nodes.yaml
+++ b/pipelines/list-nodes.yaml
@@ -3,6 +3,8 @@ kind: Pipeline
 metadata:
   name: list-nodes
   namespace: ops-system
+  labels:
+    ops/copilot: enabled
 spec:
   desc: 查看、列出某个集群的所有节点
   variables:
