--- a/pipelines/list-pods-bynode.yaml
+++ b/pipelines/list-pods-bynode.yaml
@@ -3,6 +3,8 @@ kind: Pipeline
 metadata:
   name: list-pod-bynode
   namespace: ops-system
+  labels:
+    ops/copilot: enabled
 spec:
   desc: 列出集群中的某一个 Node 上的所有 Pod
   variables:
