--- a/pipelines/list-process-byio.yaml
+++ b/pipelines/list-process-byio.yaml
@@ -3,6 +3,8 @@ kind: Pipeline
 metadata:
   name: list-process-byio
   namespace: ops-system
+  labels:
+    ops/copilot: enabled
 spec:
   desc: 获取占用 IO 的进程
   variables:
