--- a/pipelines/restart-containerd.yaml
+++ b/pipelines/restart-containerd.yaml
@@ -3,6 +3,8 @@ kind: Pipeline
 metadata:
   name: restart-containerd
   namespace: ops-system
+  labels:
+    ops/copilot: enabled
 spec:
   desc: 重启 containerd
   variables:
