--- a/pipelines/restart-kubelet.yaml
+++ b/pipelines/restart-kubelet.yaml
@@ -3,6 +3,8 @@ kind: Pipeline
 metadata:
   name: restart-kubelet
   namespace: ops-system
+  labels:
+    ops/copilot: enabled
 spec:
   desc: 重启 kubelet
   variables:
