--- a/pipelines/retag-image.yaml
+++ b/pipelines/retag-image.yaml
@@ -3,6 +3,8 @@ kind: Pipeline
 metadata:
   name: retag-image
   namespace: ops-system
+  labels:
+    ops/copilot: enabled
 spec:
   desc: 转存、retag 容器镜像
   variables:
