--- a/pipelines/search-clusterip.yaml
+++ b/pipelines/search-clusterip.yaml
@@ -3,6 +3,8 @@ kind: Pipeline
 metadata:
   name: search-clusterip
   namespace: ops-system
+  labels:
+    ops/copilot: enabled
 spec:
   desc: 查看、搜索集群的 IP
   variables:
