--- a/pipelines/cordon-node.yaml
+++ b/pipelines/cordon-node.yaml
@@ -15,8 +15,8 @@ spec:
       regex: "\b[a-zA-Z-]*node[a-zA-Z-]*\b"
   tasks:
     - name: 查看节点
-      taskRef: get-node
+      taskRef: get-node-status
     - name: 禁用节点
       taskRef: cordon-node
     - name: 查看节点
-      taskRef: get-node
+      taskRef: get-node-status
