--- a/tasks/app-argo-events.yaml
+++ b/tasks/app-argo-events.yaml
@@ -8,16 +8,10 @@ spec:
   runtimeImage: registry.cn-hangzhou.aliyuncs.com/shaowenchen/hubimage:latest
   host: anymaster
   variables:
-    argo-events-image:
-      desc: argo events image
-      default: registry.cn-hangzhou.aliyuncs.com/opshub/argoproj-argo-events:v1.8.0
-      required: true
     action:
       default: apply
   steps:
     - name: take action
       content: |
-        export ARGO_EVENTS_IMAGE=${argo-events-image}
-
         export KUBECONFIG=/host/root/.kube/config
-        envsubst < /ascend/argo-events-v1.8.0.yaml | kubectl ${action} -f -
+        envsubst < /argoproj/v1.8.0-argo-events.yaml | kubectl ${action} -f -
