--- a/tasks/app-hccl-controller.yaml
+++ b/tasks/app-hccl-controller.yaml
@@ -8,15 +8,11 @@ spec:
   runtimeImage: registry.cn-hangzhou.aliyuncs.com/shaowenchen/hubimage:latest
   host: anymaster
   variables:
-    hccl-controller-image:
-      desc: hccl-controller image
-      required: true
     action:
       default: apply
   steps:
     - name: take action
       content: |
-        export HCCL_CONTROLLER_IMAGE=${hccl-controller-image}
-
         export KUBECONFIG=/host/root/.kube/config
-        envsubst < /ascend/hccl-controller.yaml | kubectl ${action} -f -
+
+        envsubst < /ascend/v5.0.RC3-hccl-controller.yaml | kubectl ${action} -f -
