--- a/pipelines/list-process-byio.yaml
+++ b/pipelines/list-process-byio.yaml
@@ -7,14 +7,8 @@ metadata:
     ops/copilot: enabled
 spec:
   desc: 获取占用 IO 的进程
-  variables:
-    cluster:
-      required: true
-    host:
-      regex: "\b[a-zA-Z-]*node[a-zA-Z-]*\b"
-      required: true
   tasks:
     - name: 查看节点
-      taskRef: get-node
+      taskRef: get-node-status
     - name: 获取占用 IO 的进程
       taskRef: list-process-byio
