--- a/tasks/create-namesapce-kubeconfig.yaml
+++ b/tasks/create-namesapce-kubeconfig.yaml
@@ -12,15 +12,15 @@ spec:
   steps:
     - name: create kubeconfig 
       content: |
-        export TARGET_NAMESPACE="${namespace}"
-        export SA_NAME="${TARGET_NAMESPACE}-admin"
+        export TARGET_NAMESPACE=${namespace}
+        export SA_NAME="$TARGET_NAMESPACE-admin"
 
         cat <<EOF | kubectl apply -f -
         apiVersion: v1
         kind: ServiceAccount
         metadata:
-          name: ${SA_NAME}
-          namespace: ${TARGET_NAMESPACE}
+          name: $SA_NAME
+          namespace: $TARGET_NAMESPACE
         EOF
 
         cat <<EOF | kubectl apply -f -
@@ -28,7 +28,7 @@ spec:
         kind: Role
         metadata:
           name: namespace-full-access
-          namespace: ${TARGET_NAMESPACE}
+          namespace: $TARGET_NAMESPACE
         rules:
         - apiGroups: ["*"]
           resources: ["*"]
@@ -51,66 +51,67 @@ spec:
         kind: RoleBinding
         metadata:
           name: namespace-full-access
-          namespace: ${TARGET_NAMESPACE}
+          namespace: $TARGET_NAMESPACE
         roleRef:
           apiGroup: rbac.authorization.k8s.io
           kind: Role
           name: namespace-full-access
         subjects:
         - kind: ServiceAccount
-          name: ${SA_NAME}
-          namespace: ${TARGET_NAMESPACE}
+          name: $SA_NAME
+          namespace: $TARGET_NAMESPACE
         EOF
 
         cat <<EOF | kubectl apply -f -
         apiVersion: rbac.authorization.k8s.io/v1
         kind: ClusterRoleBinding
         metadata:
-          name: list-namespaces-${SA_NAME}
+          name: list-namespaces-$SA_NAME
         roleRef:
           apiGroup: rbac.authorization.k8s.io
           kind: ClusterRole
           name: list-namespaces
         subjects:
         - kind: ServiceAccount
-          name: ${SA_NAME}
-          namespace: ${TARGET_NAMESPACE}
+          name: $SA_NAME
+          namespace: $TARGET_NAMESPACE
         EOF
 
         cat <<EOF | kubectl apply -f -
         apiVersion: v1
         kind: Secret
         metadata:
-          name: ${SA_NAME}-token
-          namespace: ${TARGET_NAMESPACE}
+          name: $SA_NAME-token
+          namespace: $TARGET_NAMESPACE
           annotations:
-            kubernetes.io/service-account.name: ${SA_NAME}
+            kubernetes.io/service-account.name: $SA_NAME
         type: kubernetes.io/service-account-token
         EOF
 
-        SA_TOKEN=$(kubectl -n ${TARGET_NAMESPACE} get secret ${SA_NAME}-token -o jsonpath='{.data.token}' | base64 -d)
+        SA_TOKEN=$(kubectl -n $TARGET_NAMESPACE get secret $SA_NAME-token -o jsonpath='{.data.token}' | base64 -d)
         CURRENT_CONTEXT=$(kubectl config current-context)
-        CLUSTER_NAME=$(kubectl config view --raw -o jsonpath='{.contexts[?(@.name=="'${CURRENT_CONTEXT}'")].context.cluster}')
-        CLUSTER_SERVER=$(kubectl config view --raw -o jsonpath='{.clusters[?(@.name=="'${CLUSTER_NAME}'")].cluster.server}')
+        CLUSTER_NAME=$(kubectl config view --raw -o jsonpath='{.contexts[?(@.name=="'$CURRENT_CONTEXT'")].context.cluster}')
+        CLUSTER_SERVER=$(kubectl config view --raw -o jsonpath='{.clusters[?(@.name=="'$CLUSTER_NAME'")].cluster.server}')
 
-        cat > ${TARGET_NAMESPACE}-admin-kubeconfig.yaml << EOF
+        cat > $TARGET_NAMESPACE-admin-kubeconfig.yaml << EOF
         apiVersion: v1
         kind: Config
-        current-context: ${CLUSTER_NAME}
+        current-context: $CLUSTER_NAME
         clusters:
-        - name: ${CLUSTER_NAME}
+        - name: $CLUSTER_NAME
           cluster:
-            server: ${CLUSTER_SERVER}
+            server: $CLUSTER_SERVER
+            insecure-skip-tls-verify: true
         contexts:
-        - name: ${CLUSTER_NAME}
+        - name: $CLUSTER_NAME
           context:
-            cluster: ${CLUSTER_NAME}
-            user: ${SA_NAME}
-            namespace: ${TARGET_NAMESPACE}
+            cluster: $CLUSTER_NAME
+            user: $SA_NAME
+            namespace: $TARGET_NAMESPACE
         users:
-        - name: ${SA_NAME}
+        - name: $SA_NAME
           user:
-            token: ${SA_TOKEN}
+            token: $SA_TOKEN
         EOF
 
-        cat ${TARGET_NAMESPACE}-admin-kubeconfig.yaml
+        cat $TARGET_NAMESPACE-admin-kubeconfig.yaml
