--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -5,12 +5,20 @@ builds:
   - CGO_ENABLED=0
   main: ./cmd/cli/main.go
   binary: opscli
-  goarch:
-    - amd64
-    - arm64
   goos:
     - linux
     - darwin
+    - windows
+  goarch:
+    - "386"
+    - amd64
+    - arm
+    - arm64
+  goarm:
+    - "7"
+  mod_timestamp: "{{ .CommitTimestamp }}"
+  flags:
+    - -trimpath
   tags:
     containers_image_openpgp
   ldflags:
